--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="icon" href="/favicon.ico">
+    <title>Feedback Widget</title>
   </head>
   <body>
     <div id="root"></div>
